--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -6,7 +6,7 @@
 
 
                 <ng-container matColumnDef="Numero">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
                     <td mat-cell *matCellDef="let student"> {{ student.id }} </td>
                 </ng-container>
 
@@ -59,13 +59,9 @@
 
 
         <div class="table-container">
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
-
-
-
+            <table mat-table [dataSource]="dataSourceB" matSort class="mat-elevation-z8">
                 <ng-container matColumnDef="Numero">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
                     <td mat-cell *matCellDef="let student"> {{ student.id }} </td>
                 </ng-container>
 
